# Image_Convolution

./: BitmapImage.h  CMakeLists.txt  Filter.h  Identity.h  main.cpp
